display validations errors

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,6 +1,18 @@
 <h2>Contact us</h2>
 
 <%= form_for :contact, url: contacts_path do |f| %>  
+
+  <%if @contact && @contact.errors.any?  %> 
+  <!-- если @contact не определена и в другой переменной нет значений ошибок, строчка для ошибок не появляется -->
+    <p>
+      <ul>
+      <% @contact.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <%end%>
+      </ul>
+    </p>
+  <%end%>
+
   <p>
     <%= f.label :email %><br/>
     <%= f.text_field :email %>
