--- a/app/views/articles/create.html.erb
+++ b/app/views/articles/create.html.erb
@@ -1,1 +1,6 @@
 <h1>Article has been created</h1>
+
+<!-- <a href="/articles">Show all articles</a>  устаревший способ-->
+<!-- жестко зафиксирована ссылка -->
+
+<%= link_to 'Show all articles', articles_path %>
