--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,5 +8,9 @@
     <%= article.text %>
   </p>
 
+  <p>
+    <%= link_to 'Show', article_path(article) %> |
+    <%= link_to 'Edit', edit_article_path(article) %>
+  </p>
   <hr> <!-- разрыватель -->
 <%end%>
