--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+  <a href="/users/sign_in">Sign in</a>
+  <a href="/users/sign_out" data-method="delete">Sign out</a>
+
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
