--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,13 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <%= link_to 'Sign in', new_user_session_path %> | <%= link_to 'Sign out', destroy_user_session_path, method: :delete %> 
+
+  <% if user_signed_in? %>
+    Hi, <%= current_user.email %> |
+    <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+  <% else %>
+    <%= link_to 'Sign in', new_user_session_path %> 
+  <%end%>
 
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
