change require authenticate only for create/new actions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
 
   <% if user_signed_in? %>
-    Hi, <%= current_user.email %> |
+    Hi, <%= current_user.username %> |
     <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
   <% else %>
     <%= link_to 'Sign in', new_user_session_path %> 
