--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @article.title%></h1>
+<h1><%= @article.title%></h1> 
 
 <p>
     <%= @article.text %>
@@ -18,8 +18,13 @@
 
 <%= form_for([@article, @article.comments.build]) do |f| %>  
   <p>
-    <%= f.label :author %><br/>
-    <%= f.text_field :author %>
+    <% if user_signed_in? %>
+      <%= f.hidden_field :author, :value => current_user.username %>
+
+    <% else %>
+      <%= link_to 'Sign in', article_comments_path %> to leave comment
+  <%end%>
+    
   </p> 
 
   <p>
