--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
     <title>Blog</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,17 +13,24 @@
   </head>
 
 
-  <% if user_signed_in? %>
-    Hi, <%= current_user.username %> |
-    <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
-  <% else %>
-    <%= link_to 'Sign in', new_user_session_path %> 
-  <%end%>
-
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-
   <body>
-    <%= yield %>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <% if user_signed_in? %>
+              Hi, <%= current_user.username %> |
+              <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+            <% else %>
+              <%= link_to 'Sign in', new_user_session_path %> 
+            <%end%>
+
+            <p class="notice"><%= notice %></p>
+            <p class="alert"><%= alert %></p>
+
+            
+              <%= yield %>
+          </div> 
+      </div>
+    </div>
   </body>
 </html>
