--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New aricle</h1>
+<h1>New article</h1>
 
 <%= form_for :article, url: '/articles' do |f| %>  <!-- или просто url: articles_path -->
   <p>
